// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-disclosure-button #render should render component as expected (1) 1`] = `
<gux-disclosure-button>
  <mock:shadow-root>
    <div class="gux-disclosure-button-container gux-left">
      <button class="gux-disclosure-button">
        <gux-icon icon-name="arrow-solid-right" screenreader-text="open"></gux-icon>
      </button>
      <div class="gux-disclosure-panel gux-left">
        <slot name="panel-content"></slot>
      </div>
    </div>
  </mock:shadow-root>
</gux-disclosure-button>
`;

exports[`gux-disclosure-button #render should render component as expected (2) 1`] = `
<gux-disclosure-button is-open="">
  <mock:shadow-root>
    <div class="gux-disclosure-button-container gux-left">
      <button class="gux-disclosure-button">
        <gux-icon icon-name="arrow-solid-left" screenreader-text="open"></gux-icon>
      </button>
      <div class="gux-active gux-disclosure-panel gux-left">
        <slot name="panel-content"></slot>
      </div>
    </div>
  </mock:shadow-root>
</gux-disclosure-button>
`;

exports[`gux-disclosure-button #render should render component as expected (3) 1`] = `
<gux-disclosure-button position="left">
  <mock:shadow-root>
    <div class="gux-disclosure-button-container gux-left">
      <button class="gux-disclosure-button">
        <gux-icon icon-name="arrow-solid-right" screenreader-text="open"></gux-icon>
      </button>
      <div class="gux-disclosure-panel gux-left">
        <slot name="panel-content"></slot>
      </div>
    </div>
  </mock:shadow-root>
</gux-disclosure-button>
`;

exports[`gux-disclosure-button #render should render component as expected (4) 1`] = `
<gux-disclosure-button is-open="" position="left">
  <mock:shadow-root>
    <div class="gux-disclosure-button-container gux-left">
      <button class="gux-disclosure-button">
        <gux-icon icon-name="arrow-solid-left" screenreader-text="open"></gux-icon>
      </button>
      <div class="gux-active gux-disclosure-panel gux-left">
        <slot name="panel-content"></slot>
      </div>
    </div>
  </mock:shadow-root>
</gux-disclosure-button>
`;

exports[`gux-disclosure-button #render should render component as expected (5) 1`] = `
<gux-disclosure-button position="right">
  <mock:shadow-root>
    <div class="gux-disclosure-button-container gux-right">
      <button class="gux-disclosure-button">
        <gux-icon icon-name="arrow-solid-left" screenreader-text="open"></gux-icon>
      </button>
      <div class="gux-disclosure-panel gux-right">
        <slot name="panel-content"></slot>
      </div>
    </div>
  </mock:shadow-root>
</gux-disclosure-button>
`;

exports[`gux-disclosure-button #render should render component as expected (6) 1`] = `
<gux-disclosure-button is-open="" position="right">
  <mock:shadow-root>
    <div class="gux-disclosure-button-container gux-right">
      <button class="gux-disclosure-button">
        <gux-icon icon-name="arrow-solid-right" screenreader-text="open"></gux-icon>
      </button>
      <div class="gux-active gux-disclosure-panel gux-right">
        <slot name="panel-content"></slot>
      </div>
    </div>
  </mock:shadow-root>
</gux-disclosure-button>
`;

exports[`gux-disclosure-button #render should render component as expected (7) 1`] = `
<gux-disclosure-button label="More Info">
  <mock:shadow-root>
    <div class="gux-disclosure-button-container gux-left">
      <button class="gux-disclosure-button">
        <gux-icon icon-name="arrow-solid-right" screenreader-text="More Info"></gux-icon>
      </button>
      <div class="gux-disclosure-panel gux-left">
        <slot name="panel-content"></slot>
      </div>
    </div>
  </mock:shadow-root>
</gux-disclosure-button>
`;
